feat: add auth module
